--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,9 @@ ext {
 repositories {
     mavenLocal()
     maven { url "https://repo.grails.org/grails/core" }
+    
+    // Exanpe plugins
+    maven { url "https://dl.bintray.com/exanpe/plugins" }
 }
 
 dependencyManagement {
